--- a/debian/control
+++ b/debian/control
@@ -9,9 +9,7 @@ Build-Depends: debhelper (>= 9),
                imagemagick,
                libfile-fcntllock-perl,
                python3-all,
-               python3-wand,
-               qtchooser,
-               qttools5-dev-tools
+               python3-wand
 Standards-Version: 3.9.7
 X-Python3-Version: >= 3.2
 Vcs-Git: https://github.com/dreibh/melodic.git
@@ -43,7 +41,8 @@ Description: MELODIC Development Tools
 
 Package: melodic-server
 Architecture: any
-Depends: grub2-common | grub,
+Depends: fail2ban,
+         grub2-common | grub,
          melodic-management,
          nornet-server,
          openstack,
