--- a/debian/control
+++ b/debian/control
@@ -30,9 +30,7 @@ Description: MELODIC Management Tools
 
 Package: melodic-development
 Architecture: any
-Depends: nornet-development,
-         ${misc:Depends},
-         ${shlibs:Depends}
+Depends: nornet-development, ${misc:Depends}, ${shlibs:Depends}
 Description: MELODIC Development Tools
  This meta-package contains basic software for MELODIC development.
  The software installed provides a common working environment.
@@ -64,6 +62,12 @@ Depends: fail2ban,
          melodic-management,
          melodic-server,
          memcached,
+         nova-api,
+         nova-conductor,
+         nova-consoleauth,
+         nova-novncproxy,
+         nova-placement-api,
+         nova-scheduler,
          openstack-dashboard,
          python-memcache,
          python-pymysql,
@@ -82,12 +86,7 @@ Depends: fail2ban,
          melodic-management,
          melodic-server,
          neutron-linuxbridge-agent,
-         nova-api,
-         nova-conductor,
-         nova-consoleauth,
-         nova-novncproxy,
-         nova-placement-api,
-         nova-scheduler,
+         nova-compute,
          ${misc:Depends},
          ${shlibs:Depends}
 Description: MELODIC Compute Node
@@ -97,9 +96,7 @@ Description: MELODIC Compute Node
 
 Package: melodic-desktop
 Architecture: any
-Depends: melodic-management,
-         ${misc:Depends},
-         ${shlibs:Depends}
+Depends: melodic-management, ${misc:Depends}, ${shlibs:Depends}
 Recommends: neon-desktop | kubuntu-desktop | lubuntu-desktop | ubuntu-desktop
 Description: MELODIC Desktop
  This meta-package contains the scripts to configure a MELODIC desktop.
