--- a/debian/control
+++ b/debian/control
@@ -62,6 +62,12 @@ Depends: fail2ban,
          melodic-management,
          melodic-server,
          memcached,
+         neutron-dhcp-agent,
+         neutron-l3-agent,
+         neutron-linuxbridge-agent,
+         neutron-metadata-agent,
+         neutron-plugin-ml2,
+         neutron-server,
          nova-api,
          nova-conductor,
          nova-consoleauth,
