--- a/debian/control
+++ b/debian/control
@@ -93,6 +93,7 @@ Depends: cinder-volume,
          lvm2,
          melodic-management,
          melodic-server,
+         thin-provisioning-tools,
          ${misc:Depends},
          ${shlibs:Depends}
 Description: MELODIC Storage Node
