--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -24,8 +24,8 @@ d-i netcfg/disable_dhcp                 boolean false
 # d-i netcfg/get_gateway                  string 169.254.100.1
 d-i netcfg/confirm_static               boolean true
 
-d-i netcfg/get_hostname                 string unassigned-hostname
-d-i netcfg/get_domain                   string unassigned-domain
+d-i netcfg/get_hostname                 string akerbrygge
+d-i netcfg/get_domain                   string simula.nornet
 
 # Time
 d-i clock-setup/utc                     boolean true
@@ -46,29 +46,23 @@ d-i user-setup/encrypt-home             boolean false
 
 # Disk
 d-i partman-auto/disk                   string /dev/vda
-d-i partman/confirm_write_new_label     boolean true
+d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warning!
+d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
 d-i partman/choose_partition            select finish
 d-i partman-auto/method                 string regular
 d-i partman-auto/expert_recipe          string \
       boot-root ::                                                \
               64 64 64 fat16                                      \
                       $primary{ }                                 \
-                      method{ efi }                               \
-                      format{ /boot/efi }                         \
+                      method{ efi } format{ }                     \
+                      label{ EFI }                                \
               .                                                   \
-              12288 16384 12288 btrfs                             \
+              12288 12288 -1 btrfs                                \
                       $primary{ } $bootable{ }                    \
                       method{ format } format{ }                  \
+                      label{ Root }                               \
                       use_filesystem{ } filesystem{ btrfs }       \
                       mountpoint{ / }                             \
-              .                                                   \
-              1024 10000 200% linux-swap                          \
-                      method{ swap } format{ }                    \
-              .                                                   \
-              8192 100 -1 btrfs                                   \
-                      method{ format } format{ }                  \
-                      use_filesystem{ } filesystem{ btrfs }       \
-                      mountpoint{ /home }                         \
               .                                                   \
 
 # Mirror
@@ -104,7 +98,7 @@ d-i preseed/late_command                            string \
  in-target apt-get upgrade -y ; \
  in-target apt-get dist-upgrade -y ; \
  in-target apt-get autoremove -y ; \
- in-target apt-get install -y melodic-server melodic-management nornet-server nornet-management ; \
+ in-target apt-get install -y cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management ; \
  in-target apt-get clean
 
 # Power Off after installation
