--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -47,7 +47,13 @@ d-i user-setup/encrypt-home             boolean false
 # Disk
 d-i partman-auto/disk                   string /dev/vda
 d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warning!
-d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
+# d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
+# Repartition without warning!
+
+d-i partman/confirm                     boolean true
+d-i partman/confirm_write_new_label                         boolean     true
+d-i partman/confirm_nooverwrite                             boolean     true
+
 d-i partman/choose_partition            select finish
 d-i partman-auto/method                 string regular
 d-i partman-auto/expert_recipe          string \
@@ -71,6 +77,11 @@ d-i mirror/http/proxy                               string
 d-i mirror/http/hostname                            string no.archive.ubuntu.com
 d-i mirror/http/directory                           string /ubuntu
 
+# Grub
+d-i grub-installer/bootdev                          string /dev/vda
+d-i grub-installer/only_debian                      boolean true
+d-i grub-installer/with_other_os                    boolean true
+
 # Packages
 popularity-contest popularity-contest/participate   boolean false
 d-i apt-setup/universe                              boolean true
@@ -81,15 +92,15 @@ d-i apt-setup/local0/comment                        string Thomas Dreibholz's PP
 d-i apt-setup/local0/source                         boolean true
 d-i apt-setup/local0/key                            string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x8A8EAF3E2F2E3BB5C75F48C1CCEB82DF916C56E0
 
-d-i grub-installer/only_debian                      boolean true
-d-i grub-installer/with_other_os                    boolean true
-
 tasksel tasksel/first                               multiselect ubuntu-server
 d-i pkgsel/language-packs                           multiselect en, nb, de
 d-i pkgsel/install-language-support                 boolean true
 d-i pkgsel/update-policy                            select unattended-upgrades
-d-i pkgsel/upgrade                                  select none
+d-i pkgsel/upgrade                                  select full-upgrade
 d-i pkgsel/updatedb                                 boolean true
+d-i pkgsel/include                                  string openssh-server cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
+
+popularity-contest popularity-contest/participate   boolean true
 
 # Post-Install
 d-i preseed/late_command                            string \
@@ -98,8 +109,9 @@ d-i preseed/late_command                            string \
  in-target apt-get upgrade -y ; \
  in-target apt-get dist-upgrade -y ; \
  in-target apt-get autoremove -y ; \
- in-target apt-get install -y cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management ; \
  in-target apt-get clean
+
+#   in-target apt-get install -y cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management ; \
 
 # Power Off after installation
 d-i debian-installer/exit/halt boolean true
