--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -1,17 +1,21 @@
+# Preseed documentation:
+# https://help.ubuntu.com/lts/installation-guide/example-preseed.txt
+
 # Auto-Install
 d-i auto-install/enable                 boolean true
 debconf debconf/priority                select critical
 
 # Localization and Keyboard
-d-i debian-installer/language           string en_US:en
 d-i debian-installer/country            string NO
+d-i debian-installer/language           string en_US:en
 d-i debian-installer/locale             string en_US.UTF-8
-d-i debian-installer/keymap             string no
+# d-i debian-installer/keymap             string no   ## ???  (probably unnecessary!)
 d-i console-setup/ask_detect            boolean false
-d-i console-setup/layoutcode            string no
-d-i keyboard-configuration/layout       string Norwegian
-d-i keyboard-configuration/variant      string Standard
+# d-i console-setup/layoutcode            string de    ## ???   (probably unnecessary!)
+d-i keyboard-configuration/xkb-keymap   select de    ## ???
+d-i keyboard-configuration/layoutcode   string de   ## ???
 d-i keyboard-configuration/modelcode    string pc105
+d-i keyboard-configuration/variant      string Standard
 
 # Network
 d-i netcfg/choose_interface             select auto
@@ -48,7 +52,6 @@ d-i user-setup/encrypt-home             boolean false
 d-i partman-auto/disk                   string /dev/vda
 d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warning!
 # d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
-# Repartition without warning!
 
 d-i partman/confirm                     boolean true
 d-i partman/confirm_write_new_label                         boolean     true
@@ -78,14 +81,23 @@ d-i mirror/http/hostname                            string no.archive.ubuntu.com
 d-i mirror/http/directory                           string /ubuntu
 
 # Grub
+d-i grub-pc/install_devices_empty                   boolean yes
+grub-pc grub-pc/install_devices                     string /dev/vda
+
 d-i grub-installer/bootdev                          string /dev/vda
-d-i grub-installer/only_debian                      boolean true
-d-i grub-installer/with_other_os                    boolean true
+#d-i grub-installer/only_debian                      boolean true
+#d-i grub-installer/with_other_os                    boolean true
 
 # Packages
 popularity-contest popularity-contest/participate   boolean false
 d-i apt-setup/universe                              boolean true
 d-i apt-setup/multiverse                            boolean true
+
+## ???
+d-i apt-setup/universe/source                         boolean true
+d-i apt-setup/multiverse/source                         boolean true
+## ???
+
 d-i apt-setup/restricted                            boolean false
 d-i apt-setup/local0/repository                     string http://ppa.launchpad.net/dreibh/ppa/ubuntu xenial main
 d-i apt-setup/local0/comment                        string Thomas Dreibholz's PPA
@@ -98,21 +110,31 @@ d-i pkgsel/install-language-support                 boolean true
 d-i pkgsel/update-policy                            select unattended-upgrades
 d-i pkgsel/upgrade                                  select full-upgrade
 d-i pkgsel/updatedb                                 boolean true
+# d-i base-installer/kernel/override-image          string <SET_NEW_KERNEL_HERE>
 d-i pkgsel/include                                  string openssh-server cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
 
-popularity-contest popularity-contest/participate   boolean true
+# popularity-contest popularity-contest/participate   boolean true
 
 # Post-Install
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
- in-target apt-get update ; \
- in-target apt-get upgrade -y ; \
- in-target apt-get dist-upgrade -y ; \
- in-target apt-get autoremove -y ; \
- in-target apt-get clean
+ true
 
-#   in-target apt-get install -y cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management ; \
+
+
+#   cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
+
+#  in-target /sbin/fstrim -a
+
+#  in-target apt-get update ; \
+#  in-target apt-get upgrade -y ; \
+#  in-target apt-get dist-upgrade -y ; \
+#  in-target apt-get autoremove -y ; \
+#  in-target apt-get clean ; \
+
+#  in-target apt-get install -y cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management ; \
 
 # Power Off after installation
-d-i debian-installer/exit/halt boolean true
+d-i finish-install/reboot_in_progress note
+#d-i debian-installer/exit/halt boolean true
 d-i debian-installer/exit/poweroff boolean true
