--- a/debian/control
+++ b/debian/control
@@ -45,8 +45,7 @@ Architecture: any
 Depends: grub2-common | grub,
          melodic-management,
          nornet-server,
-         openstack,
-         python-openstackclient,
+         python3,
          ${misc:Depends},
          ${shlibs:Depends}
 Description: MELODIC Server
@@ -61,6 +60,7 @@ Depends: cinder-api,
          glance,
          grub2-common | grub,
          keystone,
+         letsencrypt,
          mariadb-server,
          melodic-management,
          melodic-server,
@@ -78,7 +78,10 @@ Depends: cinder-api,
          nova-placement-api,
          nova-scheduler,
          openstack-dashboard,
+         python-glanceclient,
          python-memcache,
+         python-neutronclient,
+         python-openstackclient,
          python-pymysql,
          rabbitmq-server,
          ${misc:Depends},
@@ -95,7 +98,7 @@ Depends: cinder-volume,
          lvm2,
          melodic-management,
          melodic-server,
-         thin-provisioning-tools,letsencrypt,
+         thin-provisioning-tools,
          ${misc:Depends},
          ${shlibs:Depends}
 Description: MELODIC Storage Node
