--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -9,13 +9,13 @@ debconf debconf/priority                select critical
 d-i debian-installer/country            string NO
 d-i debian-installer/language           string en_US:en
 d-i debian-installer/locale             string en_US.UTF-8
-# d-i debian-installer/keymap             string no   ## ???  (probably unnecessary!)
+d-i debian-installer/keymap             string no
 d-i console-setup/ask_detect            boolean false
-# d-i console-setup/layoutcode            string de    ## ???   (probably unnecessary!)
-d-i keyboard-configuration/xkb-keymap   select de    ## ???
-d-i keyboard-configuration/layoutcode   string de   ## ???
-d-i keyboard-configuration/modelcode    string pc105
+d-i console-setup/layoutcode            string no
+d-i keyboard-configuration/layoutcode   string no
+d-i keyboard-configuration/layout       string Norwegian
 d-i keyboard-configuration/variant      string Standard
+d-i keyboard-configuration/modelcode    string pc105
 
 # Network
 d-i netcfg/choose_interface             select auto
@@ -111,15 +111,18 @@ d-i pkgsel/update-policy                            select unattended-upgrades
 d-i pkgsel/upgrade                                  select full-upgrade
 d-i pkgsel/updatedb                                 boolean true
 # d-i base-installer/kernel/override-image          string <SET_NEW_KERNEL_HERE>
-d-i pkgsel/include                                  string openssh-server cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
+d-i pkgsel/include                                  string openssh-server melodic-server melodic-management nornet-server nornet-management
+# !!!!!!!!!!!!!!!!!
+# cloud-guest-utils cloud-initramfs-growroot
+# !!!!!!!!!!!!!!!!!
 
-# popularity-contest popularity-contest/participate   boolean true
+popularity-contest popularity-contest/participate   boolean true
 
 # Post-Install
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
- true
-
+ in-target /usr/bin/apt-file update ; \
+ in-target /sbin/fstrim -a
 
 
 #   cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
