--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -1,11 +1,11 @@
 # Preseed documentation:
 # https://help.ubuntu.com/lts/installation-guide/example-preseed.txt
 
-# Auto-Install
+# ====== Auto-Install =======================================================
 d-i auto-install/enable                 boolean true
 debconf debconf/priority                select critical
 
-# Localization and Keyboard
+# ====== Localization and Keyboard ==========================================
 d-i debian-installer/country            string NO
 d-i debian-installer/language           string en_US:en
 d-i debian-installer/locale             string en_US.UTF-8
@@ -17,7 +17,7 @@ d-i keyboard-configuration/layout       string Norwegian
 d-i keyboard-configuration/variant      string Standard
 d-i keyboard-configuration/modelcode    string pc105
 
-# Network
+# ====== Network ============================================================
 d-i netcfg/choose_interface             select auto
 d-i netcfg/disable_autoconfig           boolean false
 d-i netcfg/disable_dhcp                 boolean false
@@ -31,13 +31,13 @@ d-i netcfg/confirm_static               boolean true
 d-i netcfg/get_hostname                 string akerbrygge
 d-i netcfg/get_domain                   string simula.nornet
 
-# Time
+# ====== Time ===============================================================
 d-i clock-setup/utc                     boolean true
 d-i clock-setup/ntp                     boolean true
 d-i clock-setup/ntp-server              string ntp.ubuntu.com
 d-i time/zone                           string Europe/Oslo
 
-# User
+# ====== User ===============================================================
 d-i passwd/root-login                   boolean false
 d-i passwd/make-user                    boolean true
 d-i passwd/user-fullname                string  NorNet Praesum Presum
@@ -48,7 +48,7 @@ d-i passwd/user-uid                     string  1000
 d-i passwd/user-default-groups          string  adm cdrom sudo dip plugdev lpadmin sambashare
 d-i user-setup/encrypt-home             boolean false
 
-# Disk
+# ====== Disk  ==============================================================
 d-i partman-auto/disk                   string /dev/vda
 d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warning!
 # d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
@@ -74,70 +74,55 @@ d-i partman-auto/expert_recipe          string \
                       mountpoint{ / }                             \
               .                                                   \
 
-# Mirror
+# ====== Mirror =============================================================
 d-i mirror/protocol                                 string http
 d-i mirror/http/proxy                               string
 d-i mirror/http/hostname                            string no.archive.ubuntu.com
 d-i mirror/http/directory                           string /ubuntu
 
-# Grub
+# ====== Grub ===============================================================
 d-i grub-pc/install_devices_empty                   boolean yes
 grub-pc grub-pc/install_devices                     string /dev/vda
-
+#
 d-i grub-installer/bootdev                          string /dev/vda
-#d-i grub-installer/only_debian                      boolean true
-#d-i grub-installer/with_other_os                    boolean true
+# d-i grub-installer/only_debian                      boolean true
+# d-i grub-installer/with_other_os                    boolean true
 
-# Packages
-popularity-contest popularity-contest/participate   boolean false
+# ====== Packages ===========================================================
+# Repositories:
+popularity-contest popularity-contest/participate   boolean true   # !!! May be disabled! !!!
 d-i apt-setup/universe                              boolean true
+d-i apt-setup/universe/source                       boolean true
 d-i apt-setup/multiverse                            boolean true
+d-i apt-setup/multiverse/source                     boolean true
 
-## ???
-d-i apt-setup/universe/source                         boolean true
-d-i apt-setup/multiverse/source                         boolean true
-## ???
-
+# Thomas Dreibholz's PPA:
 d-i apt-setup/restricted                            boolean false
 d-i apt-setup/local0/repository                     string http://ppa.launchpad.net/dreibh/ppa/ubuntu xenial main
 d-i apt-setup/local0/comment                        string Thomas Dreibholz's PPA
 d-i apt-setup/local0/source                         boolean true
 d-i apt-setup/local0/key                            string http://keyserver.ubuntu.com:11371/pks/lookup?op=get&search=0x8A8EAF3E2F2E3BB5C75F48C1CCEB82DF916C56E0
 
+# Package settings:
 tasksel tasksel/first                               multiselect ubuntu-server
 d-i pkgsel/language-packs                           multiselect en, nb, de
 d-i pkgsel/install-language-support                 boolean true
 d-i pkgsel/update-policy                            select unattended-upgrades
 d-i pkgsel/upgrade                                  select full-upgrade
 d-i pkgsel/updatedb                                 boolean true
+d-i pkgsel/include                                  string bash-completion openssh-server cloud-guest-utils cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
 # d-i base-installer/kernel/override-image          string <SET_NEW_KERNEL_HERE>
-d-i pkgsel/include                                  string openssh-server melodic-server melodic-management nornet-server nornet-management
-# !!!!!!!!!!!!!!!!!
-# cloud-guest-utils cloud-initramfs-growroot
-# !!!!!!!!!!!!!!!!!
 
-popularity-contest popularity-contest/participate   boolean true
-
-# Post-Install
+# ====== Post-Install =======================================================
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
  in-target /usr/bin/apt-file update ; \
- in-target /sbin/fstrim -a
+ in-target /usr/bin/apt-get update ; \
+ in-target /usr/bin/apt-get dist-upgrade -y ; \
+ in-target /usr/bin/apt-get clean ; \
+ in-target /sbin/fstrim / || true ; \
+ in-target true # <SET_POSTINSTALL_COMMANDS_HERE>
 
-
-#   cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
-
-#  in-target /sbin/fstrim -a
-
-#  in-target apt-get update ; \
-#  in-target apt-get upgrade -y ; \
-#  in-target apt-get dist-upgrade -y ; \
-#  in-target apt-get autoremove -y ; \
-#  in-target apt-get clean ; \
-
-#  in-target apt-get install -y cloud-guest-utils cloud-init cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management ; \
-
-# Power Off after installation
+# ====== Power Off after installation =======================================
 d-i finish-install/reboot_in_progress note
-#d-i debian-installer/exit/halt boolean true
 d-i debian-installer/exit/poweroff boolean true
