--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -9,13 +9,15 @@ debconf debconf/priority                select critical
 d-i debian-installer/country            string NO
 d-i debian-installer/language           string en_US:en
 d-i debian-installer/locale             string en_US.UTF-8
-d-i debian-installer/keymap             string no
+
+# !!! These lines have no effect -> bug #1553147 !!!
+# Need to set keyboard layout by late_command ...
 d-i console-setup/ask_detect            boolean false
-d-i console-setup/layoutcode            string no
-d-i keyboard-configuration/layoutcode   string no
-d-i keyboard-configuration/layout       string Norwegian
-d-i keyboard-configuration/variant      string Standard
-d-i keyboard-configuration/modelcode    string pc105
+d-i keyboard-configuration/modelcode    string <SET_XKBMODEL_HERE>
+d-i keyboard-configuration/layoutcode   string <SET_XKBLAYOUT_HERE>
+d-i keyboard-configuration/variantcode  string <SET_XKBVARIANT_HERE>
+d-i keyboard-configuration/optionscode  string <SET_XKBOPTIONS_HERE>
+
 
 # ====== Network ============================================================
 d-i netcfg/choose_interface             select auto
@@ -116,6 +118,10 @@ d-i pkgsel/include                                  string bash-completion opens
 # ====== Post-Install =======================================================
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
+ in-target /bin/sed -i "s/XKBMODEL=\"[a-z]*\"/XKBMODEL=\"<SET_XKBMODEL_HERE>\"/g" /etc/default/keyboard ; \
+ in-target /bin/sed -i "s/XKBLAYOUT=\"[a-z]*\"/XKBLAYOUT=\"<SET_XKBLAYOUT_HERE>\"/g" /etc/default/keyboard ; \
+ in-target /bin/sed -i "s/XKBVARIANT=\"[a-z]*\"/XKBVARIANT=\"<SET_XKBVARIANT_HERE>\"/g" /etc/default/keyboard ; \
+ in-target /bin/sed -i "s/XKBOPTIONS=\"[a-z]*\"/XKBOPTIONS=\"<SET_XKBOPTIONS_HERE>\"/g" /etc/default/keyboard ; \
  in-target /usr/bin/apt-file update ; \
  in-target /usr/bin/apt-get update ; \
  in-target /usr/bin/apt-get dist-upgrade -y ; \
