--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -1,3 +1,21 @@
+# Ubuntu Preseed Configuration
+# Copyright (C) 2017 by Thomas Dreibholz
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+# Contact: dreibh@simula.no
+
 # Preseed documentation:
 # https://help.ubuntu.com/lts/installation-guide/example-preseed.txt
 
@@ -6,9 +24,12 @@ d-i auto-install/enable                 boolean true
 debconf debconf/priority                select critical
 
 # ====== Localization and Keyboard ==========================================
+# Using Irish locale (€, metric units, etc.), but late_command sets British
+# time format (24-hour clock). Also install locales for NO, DE, CZ and PL.
 d-i debian-installer/country            string NO
-d-i debian-installer/language           string en_US:en
-d-i debian-installer/locale             string en_US.UTF-8
+d-i debian-installer/language           string en_IE:en
+d-i debian-installer/locale             string en_IE.UTF-8
+d-i localechooser/supported-locales     multiselect en_US.UTF-8, en_GB.UTF-8, en_AU.UTF-8, no_NB.UTF-8, de_DE.UTF-8, cs_CZ.UTF-8, pl_PL.UTF-8
 
 # !!! These lines have no effect -> bug #1553147 !!!
 # Need to set keyboard layout by late_command ...
@@ -56,10 +77,10 @@ d-i partman-basicfilesystems/no_swap    boolean false   # Disable "no swap" warn
 # d-i partman/confirm_write_new_label     boolean false   # Repartition without warning!
 
 d-i partman/confirm                     boolean true
-d-i partman/confirm_write_new_label                         boolean     true
-d-i partman/confirm_nooverwrite                             boolean     true
-
+d-i partman/confirm_write_new_label     boolean true
+d-i partman/confirm_nooverwrite         boolean true
 d-i partman/choose_partition            select finish
+
 d-i partman-auto/method                 string regular
 d-i partman-auto/expert_recipe          string \
       boot-root ::                                                \
@@ -83,12 +104,11 @@ d-i mirror/http/hostname                            string no.archive.ubuntu.com
 d-i mirror/http/directory                           string /ubuntu
 
 # ====== Grub ===============================================================
-d-i grub-pc/install_devices_empty                   boolean yes
 grub-pc grub-pc/install_devices                     string /dev/vda
-
+d-i grub-pc/install_devices_empty                   boolean yes
 d-i grub-installer/bootdev                          string /dev/vda
-# d-i grub-installer/only_debian                      boolean true
-# d-i grub-installer/with_other_os                    boolean true
+d-i grub-installer/only_debian                      boolean true
+d-i grub-installer/with_other_os                    boolean true
 
 # ====== Packages ===========================================================
 # Repositories:
@@ -107,7 +127,7 @@ d-i apt-setup/local0/key                            string http://keyserver.ubun
 
 # Package settings:
 tasksel tasksel/first                               multiselect ubuntu-server
-d-i pkgsel/language-packs                           multiselect en, nb, de
+d-i pkgsel/language-packs                           multiselect en, nb, de, cz, pl
 d-i pkgsel/install-language-support                 boolean true
 d-i pkgsel/update-policy                            select unattended-upgrades
 d-i pkgsel/upgrade                                  select full-upgrade
@@ -122,10 +142,14 @@ d-i preseed/late_command                            string \
  in-target /bin/sed -i "s/XKBLAYOUT=\"[a-z]*\"/XKBLAYOUT=\"<SET_XKBLAYOUT_HERE>\"/g" /etc/default/keyboard ; \
  in-target /bin/sed -i "s/XKBVARIANT=\"[a-z]*\"/XKBVARIANT=\"<SET_XKBVARIANT_HERE>\"/g" /etc/default/keyboard ; \
  in-target /bin/sed -i "s/XKBOPTIONS=\"[a-z]*\"/XKBOPTIONS=\"<SET_XKBOPTIONS_HERE>\"/g" /etc/default/keyboard ; \
+ in-target /usr/sbin/dpkg-reconfigure -fnoninteractive keyboard-configuration ; \
+ in-target /usr/sbin/update-locale LC_TIME=en_GB.UTF-8 LC_MESSAGES=POSIX ; \
  in-target /usr/bin/apt-file update ; \
  in-target /usr/bin/apt-get update ; \
  in-target /usr/bin/apt-get dist-upgrade -y ; \
  in-target /usr/bin/apt-get clean ; \
+ in-target /usr/bin/sudo -u dreibh /bin/bash -c -- "/bin/mkdir -p /tmp/src/nornet-control && cd /tmp/src/nornet-control && pwd && git init && git remote add origin https://github.com/simula/nornet-control.git" ; \
+ in-target /usr/bin/sudo -u dreibh /bin/bash -c -- "/bin/mkdir -p /tmp/src/melodic-nornet && cd /tmp/src/melodic-nornet && pwd && git init && git remote add origin https://github.com/simula/melodic-nornet.git" ; \
  in-target /sbin/fstrim / || true ; \
  in-target true # <SET_POSTINSTALL_COMMANDS_HERE>
 
