--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -148,8 +148,8 @@ d-i preseed/late_command                            string \
  in-target /usr/bin/apt-get update ; \
  in-target /usr/bin/apt-get dist-upgrade -y ; \
  in-target /usr/bin/apt-get clean ; \
- in-target /usr/bin/sudo -u dreibh /bin/bash -c -- "/bin/mkdir -p /tmp/src/nornet-control && cd /tmp/src/nornet-control && pwd && git init && git remote add origin https://github.com/simula/nornet-control.git" ; \
- in-target /usr/bin/sudo -u dreibh /bin/bash -c -- "/bin/mkdir -p /tmp/src/melodic-nornet && cd /tmp/src/melodic-nornet && pwd && git init && git remote add origin https://github.com/simula/melodic-nornet.git" ; \
+ in-target /usr/bin/sudo -u nornetpp /bin/bash -c -- "/bin/mkdir -p /home/nornetpp/src/nornet-control && cd /home/nornetpp/src/nornet-control && pwd && git init && git remote add origin https://github.com/simula/nornet-control.git" ; \
+ in-target /usr/bin/sudo -u nornetpp /bin/bash -c -- "/bin/mkdir -p /home/nornetpp/src/melodic-nornet && cd /home/nornetpp/src/melodic-nornet && pwd && git init && git remote add origin https://github.com/simula/melodic-nornet.git" ; \
  in-target /sbin/fstrim / || true ; \
  in-target true # <SET_POSTINSTALL_COMMANDS_HERE>
 
