--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -84,11 +84,6 @@ d-i partman/choose_partition            select finish
 d-i partman-auto/method                 string regular
 d-i partman-auto/expert_recipe          string \
       boot-root ::                                                \
-              64 64 64 fat16                                      \
-                      $primary{ }                                 \
-                      method{ efi } format{ }                     \
-                      label{ EFI }                                \
-              .                                                   \
               12288 12288 -1 btrfs                                \
                       $primary{ } $bootable{ }                    \
                       method{ format } format{ }                  \
@@ -96,6 +91,20 @@ d-i partman-auto/expert_recipe          string \
                       use_filesystem{ } filesystem{ btrfs }       \
                       mountpoint{ / }                             \
               .                                                   \
+
+# ------ With EFI settings: ------
+#               1 1 1 free                                          \
+#                       $gptonly{ }                                 \
+#                       $primary{ }                                 \
+#                       $bios_boot{ }                               \
+#                       method{ biosgrub }                          \
+#               .                                                   \
+#               64 64 64 fat16                                      \
+#                       $gptonly{ }                                 \
+#                       $primary{ }                                 \
+#                       method{ efi } format{ }                     \
+#                       label{ EFI }                                \
+#               .                                                   \
 
 # ====== Mirror =============================================================
 d-i mirror/protocol                                 string http
@@ -148,6 +157,7 @@ d-i preseed/late_command                            string \
  in-target /usr/bin/apt-get update ; \
  in-target /usr/bin/apt-get dist-upgrade -y ; \
  in-target /usr/bin/apt-get clean ; \
+ in-target /usr/bin/Create-New-SSH-Node-Keys -yes-to-all-i-am-really-sure ; \
  in-target /usr/bin/sudo -u nornetpp /bin/bash -c -- "/bin/mkdir -p /home/nornetpp/src/nornet-control && cd /home/nornetpp/src/nornet-control && pwd && git init && git remote add origin https://github.com/simula/nornet-control.git" ; \
  in-target /usr/bin/sudo -u nornetpp /bin/bash -c -- "/bin/mkdir -p /home/nornetpp/src/melodic-nornet && cd /home/nornetpp/src/melodic-nornet && pwd && git init && git remote add origin https://github.com/simula/melodic-nornet.git" ; \
  in-target /sbin/fstrim / || true ; \
