Improved preseed files.

--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -145,6 +145,13 @@ d-i pkgsel/include                                  string bash-completion opens
 # d-i base-installer/kernel/override-image          string <SET_NEW_KERNEL_HERE>
 
 # ====== Post-Install =======================================================
+# The following tasks are performed:
+# * Set the keyboard layout (buggy installer does not set it!)
+# * Set time locale to en_GB.UTF-8 for 24-hour clock
+# * Reinstall nornet-server to update Grub configuration (console=ttyS0...)
+# * Update SSH configuration
+# * Add NorNet/MELODIC Git repositories (just configuration, no fetching)
+# * Clean up
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
  in-target /bin/sed -i "s/XKBMODEL=\"[a-z]*\"/XKBMODEL=\"<SET_XKBMODEL_HERE>\"/g" /etc/default/keyboard ; \
@@ -153,6 +160,7 @@ d-i preseed/late_command                            string \
  in-target /bin/sed -i "s/XKBOPTIONS=\"[a-z]*\"/XKBOPTIONS=\"<SET_XKBOPTIONS_HERE>\"/g" /etc/default/keyboard ; \
  in-target /usr/sbin/dpkg-reconfigure -fnoninteractive keyboard-configuration ; \
  in-target /usr/sbin/update-locale LC_TIME=en_GB.UTF-8 LC_MESSAGES=POSIX ; \
+ in-target /usr/bin/apt-get install --reinstall nornet-server ; \
  in-target /usr/bin/apt-file update ; \
  in-target /usr/bin/apt-get update ; \
  in-target /usr/bin/apt-get dist-upgrade -y ; \
