--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -146,6 +146,7 @@ d-i pkgsel/include                                  string bash-completion opens
 
 # ====== Post-Install =======================================================
 # The following tasks are performed:
+# * Enable address assignment via DHCP + DHCPv6
 # * Set the keyboard layout (buggy installer does not set it!)
 # * Set time locale to en_GB.UTF-8 for 24-hour clock
 # * Reinstall nornet-server to update Grub configuration (console=ttyS0...)
@@ -154,6 +155,11 @@ d-i pkgsel/include                                  string bash-completion opens
 # * Clean up
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
+ in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "iface eth0 inet dhcp" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "iface eth0 inet6 dhcp" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "   autoconf 0" >>/etc/network/interfaces' ; \
  in-target /bin/sed -i "s/XKBMODEL=\"[a-z]*\"/XKBMODEL=\"<SET_XKBMODEL_HERE>\"/g" /etc/default/keyboard ; \
  in-target /bin/sed -i "s/XKBLAYOUT=\"[a-z]*\"/XKBLAYOUT=\"<SET_XKBLAYOUT_HERE>\"/g" /etc/default/keyboard ; \
  in-target /bin/sed -i "s/XKBVARIANT=\"[a-z]*\"/XKBVARIANT=\"<SET_XKBVARIANT_HERE>\"/g" /etc/default/keyboard ; \
