--- a/src/cloud-init/cloud.cfg
+++ b/src/cloud-init/cloud.cfg
@@ -62,7 +62,7 @@ cloud_config_modules:
  - apt-configure
  - ntp
  - timezone
- - disable-ec2-metadata
+ # - disable-ec2-metadata
  - runcmd
  - byobu
 
@@ -85,7 +85,7 @@ cloud_final_modules:
  - scripts-user
  - ssh-authkey-fingerprints
  - keys-to-console
- - phone-home
+ # - phone-home
  - final-message
  - power-state-change
 
@@ -100,7 +100,11 @@ system_info:
 
 # ====== Write configuration files ==========================================
 power_state:
+   delay: "now"
    mode: reboot
+   message: Bye Bye
+   timeout: 1
+
 
 # ====== Write configuration files ==========================================
 write_files:
