--- a/src/cloud-init/cloud.cfg
+++ b/src/cloud-init/cloud.cfg
@@ -25,11 +25,15 @@
 # YAML validator: http://www.yamllint.com/
 
 
+# ====== Cloud-Init settings ================================================
 users:
    - default
 
 disable_root: true
 preserve_hostname: false
+manage_etc_hosts: true
+apt_preserve_sources_list: true
+
 
 # ====== Modules in 'init' stage ============================================
 cloud_init_modules:
