Improved preseed configuration.

--- a/src/images/preseed.cfg
+++ b/src/images/preseed.cfg
@@ -25,11 +25,11 @@ debconf debconf/priority                select critical
 
 # ====== Localization and Keyboard ==========================================
 # Using Irish locale (€, metric units, etc.), but late_command sets British
-# time format (24-hour clock). Also install locales for NO, DE, CZ and PL.
+# time format (24-hour clock). Also install locales for NO, DE, CZ, PL, CN.
 d-i debian-installer/country            string NO
 d-i debian-installer/language           string en_IE:en
 d-i debian-installer/locale             string en_IE.UTF-8
-d-i localechooser/supported-locales     multiselect en_US.UTF-8, en_GB.UTF-8, en_AU.UTF-8, no_NB.UTF-8, de_DE.UTF-8, cs_CZ.UTF-8, pl_PL.UTF-8
+d-i localechooser/supported-locales     multiselect en_US.UTF-8, en_GB.UTF-8, en_AU.UTF-8, no_NB.UTF-8, de_DE.UTF-8, cs_CZ.UTF-8, pl_PL.UTF-8, zh_CN.UTF-8
 
 # !!! These lines have no effect -> bug #1553147 !!!
 # Need to set keyboard layout by late_command ...
@@ -136,17 +136,18 @@ d-i apt-setup/local0/key                            string http://keyserver.ubun
 
 # Package settings:
 tasksel tasksel/first                               multiselect ubuntu-server
-d-i pkgsel/language-packs                           multiselect en, nb, de, cz, pl
+d-i pkgsel/language-packs                           multiselect en, nb, de, cz, pl, zh-hans
 d-i pkgsel/install-language-support                 boolean true
 d-i pkgsel/update-policy                            select unattended-upgrades
 d-i pkgsel/upgrade                                  select full-upgrade
 d-i pkgsel/updatedb                                 boolean true
-d-i pkgsel/include                                  string bash-completion openssh-server cloud-guest-utils cloud-initramfs-growroot melodic-server melodic-management nornet-server nornet-management
+d-i pkgsel/include                                  string bash-completion openssh-server cloud-init melodic-server melodic-management nornet-server nornet-management
 # d-i base-installer/kernel/override-image          string <SET_NEW_KERNEL_HERE>
 
 # ====== Post-Install =======================================================
 # The following tasks are performed:
-# * Enable address assignment via DHCP + DHCPv6
+# * Rewrite /etc/network/interfaces to use DHCP + DHCPv6
+# * Enable MELODIC/NorNet Core Cloud-Init configuration
 # * Set the keyboard layout (buggy installer does not set it!)
 # * Set time locale to en_GB.UTF-8 for 24-hour clock
 # * Reinstall nornet-server to update Grub configuration (console=ttyS0...)
@@ -155,11 +156,22 @@ d-i pkgsel/include                                  string bash-completion opens
 # * Clean up
 d-i preseed/late_command                            string \
  echo "====== NorNet/MELODIC Post-Install ======" ; \
+ in-target /bin/bash -c -- '/bin/echo "# Network configuration written by preseed late_command" >/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "source /etc/network/interfaces.d/*" >>/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "# The loopback network interface" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "auto lo" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "iface lo inet loopback" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "iface lo inet6 loopback" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "# The Ethermet network interface" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "auto eth0" >>/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "iface eth0 inet dhcp" >>/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "" >>/etc/network/interfaces' ; \
  in-target /bin/bash -c -- '/bin/echo "iface eth0 inet6 dhcp" >>/etc/network/interfaces' ; \
- in-target /bin/bash -c -- '/bin/echo "   autoconf 0" >>/etc/network/interfaces' ; \
+ in-target /bin/bash -c -- '/bin/echo "autoconf 0" >>/etc/network/interfaces' ; \
+ in-target /bin/cp /usr/share/doc/melodic-server/examples/cloud.cfg /etc/cloud/cloud.cfg ; \
  in-target /bin/sed -i "s/XKBMODEL=\"[a-z]*\"/XKBMODEL=\"<SET_XKBMODEL_HERE>\"/g" /etc/default/keyboard ; \
  in-target /bin/sed -i "s/XKBLAYOUT=\"[a-z]*\"/XKBLAYOUT=\"<SET_XKBLAYOUT_HERE>\"/g" /etc/default/keyboard ; \
  in-target /bin/sed -i "s/XKBVARIANT=\"[a-z]*\"/XKBVARIANT=\"<SET_XKBVARIANT_HERE>\"/g" /etc/default/keyboard ; \
